# sTuTraSt

./: .gitignore  ALGORITHM_VERIFICATION.md  ALL_SESSIONS_COMPLETE.md  BEFORE_AFTER_COMPARISON.md  CMakeLists.txt  COMPLETE_FINAL_SUMMARY.md  COMPLETE_PROJECT_SUMMARY.md  CURRENT_STATUS.md  FINAL_COMPARISON.md  FINAL_PROJECT_STATUS.md  FINAL_STATUS.md  FINAL_VALIDATION_REPORT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  HANDOFF_20260222_298K_PRODUCTION_CONTINUATION.md  IMPLEMENTATION_FINAL_SUMMARY.md  IMPLEMENTATION_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Makefile  OPTIMIZATIONS.md  README.md  README_CPP.md  SESSION10_SUMMARY.md  SESSION11_SUMMARY.md  SESSION12_SUMMARY.md  SESSION13_SUMMARY.md  SESSION14_SUMMARY.md  SESSION15_SUMMARY.md  SESSION16_SUMMARY.md  SESSION17_SUMMARY.md  SESSION18_SUMMARY.md  SESSION19_SUMMARY.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SESSION5_FINAL.md  SESSION6_SUMMARY.md  SESSION7_SUMMARY.md  SESSION8_SUMMARY.md  SESSION9_SUMMARY.md  TECHNICAL.md  (+9 more)
_codeql_build_dir/: Makefile  tutrast
archive/20260222_cleanup/: ARCHIVE_MANIFEST_20260222.tsv  production_pilot_manifest_20260222.csv
archive/20260227_runtime_cleanup/: ARCHIVE_MANIFEST_20260227_094839.tsv
archive/20260227_stop_and_handoff_cleanup/: ARCHIVE_MANIFEST_20260227_102458.tsv
archive/20260227_timeout_and_intermediate_cleanup/: ARCHIVE_MANIFEST_20260227_0225.tsv  TIMEOUT_REPAIR_ROWS_20260227_0228.tsv
benchmarks/: generate_synthetic_fixture.py  run_benchmark_suite.py  statistical_acceptance.py
examples/basic/: README.md  grid.cube  input.param
include/: cli_options.h  cluster.h  cube_parser.h  grid.h  input_parser.h  kmc.h  kmc_campaign.h  kmc_state.h  matrix_utils.h  output_writer.h  pbc.h  transition_state.h  tunnel.h  types.h
src/: cli_options.cpp  cluster.cpp  cube_parser.cpp  grid.cpp  input_parser.cpp  kmc.cpp  kmc_campaign.cpp  kmc_state.cpp  main.cpp  matrix_utils.cpp  output_writer.cpp  pbc.cpp  pes_grid_v10_cpp.cpp  transition_state.cpp  tunnel.cpp
tests/: kmc_checkpoint_tests.cpp  run_cli_campaign_append_test.sh  run_cli_campaign_extend_test.sh  run_cli_checkpoint_resume_test.sh
tests/fixtures/small_cli/: grid.cube  input.param
verification_equivalence_final_20260222/: FULL_REPLACEMENT_ALIGNMENT_20260222.md  README.md
